...
        />
      )}

      <TextInput
        style={[commonStyles.inputBordered, styles.inputOverride]}
        placeholder="YYYY-MM-DD"
        testID="onboarding-birthday-input"
        value={birthday}
        onChangeText={setBirthday}
        keyboardType={Platform.OS === 'ios' ? 'numbers-and-punctuation' : 'default'}
        maxLength={10}
        editable={!isSubmitting}
      />

      <ActionButton
        variant="google"
        onPress={handleSubmit}
        text="Continue"
        testID="onboarding-submit-button"
        loadingText="Saving..."
        loading={isSubmitting}
        style={styles.button}
      />
    </KeyboardAvoidingView>
  );
...
