appId: com.constellate.app
---
- launchApp
- tapOn:
    id: "home-tab"
- tapOn:
    id: "sign-out-button"
- tapOn:
    id: "email-input"
- inputText: "userB@test.com"
- tapOn:
    id: "password-input"
- inputText: "testpassword123"
- tapOn:
    id: "email-submit-button"
- tapOn: "Not Now"
- assertVisible: "Hey, PartnerB!"
- tapOn:
    id: "partners-tab"
- tapOn:
    id: "add-partner-button"
- assertVisible: "Wants to connect with you"
- tapOn:
    id: "accept-button"
- swipe:
    direction: DOWN
- tapOn:
    id: "partners-tab"
- swipe:                                                                                                                      
      start: "50%, 20%"                                                                                                         
      end: "50%, 80%" 
- extendedWaitUntil:
    visible: 
        id: "partner-name-PartnerA"
    timeout: 5000
